--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,6 +18,17 @@
   font-size: large;
 }
 
+.App-add-button {
+  position: absolute;
+  left: 10px;
+  padding: 5px;
+}
+
+.content-center {
+  display: flex;
+  justify-content: space-around;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
