--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,13 +20,13 @@
 
 .App-add-button {
   position: absolute;
-  left: 10px;
+  right: 10px;
   padding: 5px;
 }
 
 .content-center {
-  display: flex;
-  justify-content: space-around;
+	max-width: 960px;
+  margin: auto;
 }
 
 @keyframes App-logo-spin {
